[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "place-bot"
version = "2.0"
description = "A simple robot simulator"
readme = "README.md"
authors = [
    { name = "Emmanuel Battesti", email = "emmanuel.battesti@ensta.fr" }
]
maintainers = [
    { name = "Emmanuel Battesti", email = "emmanuel.battesti@ensta.fr" }
]
license = {file = "LICENSE"}
requires-python = ">=3.8"
keywords = ["robot", "simulator"]
dependencies = [
    "opencv-contrib-python>=4.10.0.84",
    "pathlib2>=2.3.7.post1",
    "arcade==2.6.17",
   # "cerberus>=1.3.4",
   # "scikit-image>=0.21.0",
    "matplotlib>=3.7.5",
    #"PyYAML>=6.0.2",
    "numpy>=1.24.4",
    "pyqtgraph",
    "PySide6"
]
classifiers = [
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
# To install the package with the 'dev' extra, use:
# pip install place-bot[dev]
# or in editable mode:
# pip install -e .[dev]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "coverage",
    "gprof2dot"
]

[tool.setuptools.package-data]
"place_bot" = [
    "resources/robot.png",
    "resources/stone_texture_g_04.png",
    "solutions/*.yml",
    "simulation/ray_sensors/shaders/*.glsl"
]

[project.urls]
Documentation = "https://github.com/emmanuel-battesti/place-bot/blob/main/README.md"
Repository = "https://github.com/emmanuel-battesti/place-bot.git"
Changelog = "https://github.com/emmanuel-battesti/place-bot/blob/main/CHANGELOG.md"
Issues = "https://github.com/emmanuel-battesti/place-bot/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

