[metadata]
name = place-bot
version = 0.0
description = A simple robot simulator
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/emmanuel-battesti/place-bot
author = Emmanuel Battesti
author_email = emmanuel.battesti@ensta-paris.fr
license = MIT
project_urls = 
    Source = https://github.com/emmanuel-battesti/place-bot
    Tracker = https://github.com/emmanuel-battesti/place-bot/issues
classifiers =
    Programming Language :: Python :: 3
keywords = robotics, simulator

[options.packages.find]
where=src

[options.package_data]
* = README.md, *.png, *.jpg
#* = *.png
#* = *.jpg

[options]
python_requires = >=3.8
packages = find:
package_dir=
    =src
platforms = any
zip_safe = True
include_package_data = True
install_requires =
		arcade==2.6.16
		pymunk>=6.2.1
		numpy
		pillow
		pytest
		opencv-contrib-python>=4.5.5.64
		matplotlib
		setuptools
		spg @ git+https://github.com/emmanuel-battesti/simple-playgrounds.git@place-bot#egg=spg
		#-e /home/battesti/projetCompetRobotsDGA/simple-playgrounds
		#simple-playgrounds
		#spg
